fix additional information not showing

--- a/skin/frontend/metros/slimmedeals/mw_dailydeal/css/promo_group.css
+++ b/skin/frontend/metros/slimmedeals/mw_dailydeal/css/promo_group.css
@@ -1051,7 +1051,7 @@ ol.mini-products-list { padding-left:0px !important; margin-bottom: 1px;}
     cursor: pointer;
 }
 
-.attribute-specs{
+.deals-block .attribute-specs{
     display: none;
 }
 
